--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0083.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0083.html
@@ -23,7 +23,7 @@
         </span>
         <span id="w_2" class="ocr_word" title="bbox 1897 163 1957 209">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">88</ins>
+            <ins title="nlp 2.00">33</ins>
           </span>
         </span>
       </span>
@@ -76,8 +76,7 @@
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1329 275 1471 326">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tUitur,</ins>
-            <del title="nlp 0.90">tUitur,</del>
+            <ins title="nlp 2.00">utitur,</ins>
           </span>
         </span>
         <span id="w_12" class="ocr_word" title="bbox 1503 275 1552 318" lang="grc">
@@ -87,8 +86,7 @@
         </span>
         <span id="w_13" class="ocr_word" title="bbox 1580 274 1726 320">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mdius</ins>
-            <del title="nlp 0.90">mdius</del>
+            <ins title="nlp 2.00">melius</ins>
           </span>
         </span>
         <span id="w_14" class="ocr_word" title="bbox 1750 279 1808 318">
@@ -136,14 +134,12 @@
         </span>
         <span id="w_21" class="ocr_word" title="bbox 937 346 1060 389">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">NihU</ins>
-            <del title="nlp 0.90">NihU</del>
+            <ins title="nlp 2.00">Nihil</ins>
           </span>
         </span>
         <span id="w_22" class="ocr_word" title="bbox 1091 351 1226 390">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">atUem</ins>
-            <del title="nlp 0.90">atUem</del>
+            <ins title="nlp 2.00">autem</ins>
           </span>
         </span>
         <span id="w_23" class="ocr_word" title="bbox 1255 347 1409 390">
@@ -154,8 +150,7 @@
         </span>
         <span id="w_24" class="ocr_word" title="bbox 1440 346 1608 391">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mdius:</ins>
-            <del title="nlp 0.90">mdius:</del>
+            <ins title="nlp 2.00">melius:</ins>
           </span>
         </span>
         <span id="w_25" class="ocr_word" title="bbox 1638 347 1800 390" lang="grc">
@@ -179,8 +174,7 @@
         </span>
         <span id="w_28" class="ocr_word" title="bbox 424 419 565 461">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">utUur.</ins>
-            <del title="nlp 0.90">utUur.</del>
+            <ins title="nlp 2.00">utitur.</ins>
           </span>
         </span>
         <span id="w_29" class="ocr_word" title="bbox 628 416 690 461">
@@ -288,9 +282,14 @@
             <del title="nlp 0.90">rationem</del>
           </span>
         </span>
-        <span id="w_48" class="ocr_word" title="bbox 584 560 780 604">
+        <span id="w_48_0" class="ocr_word" title="bbox 584 560 780 604">
           <span class="alternatives">
-            <ins title="nlp 2.00">cpmc;isot</ins>
+            <ins class="alt" title="nlp 2.00">conclusit</ins>
+          </span>
+        </span>
+        <span id="w_48_1" class="ocr_word" title="bbox 584 560 780 604">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_49" class="ocr_word" title="bbox 803 561 876 603">
@@ -339,11 +338,6 @@
             <del title="nlp 0.90">tibiae</del>
           </span>
         </span>
-        <span id="w_57" class="ocr_word" title="bbox 1978 579 1994 606">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">5</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 211 632 1958 688">
         <span id="w_58" class="ocr_word" title="bbox 211 636 491 685">
@@ -360,8 +354,7 @@
         </span>
         <span id="w_60" class="ocr_word" title="bbox 687 632 912 684">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">duhitares,</ins>
-            <del title="nlp 0.90">duhitares,</del>
+            <ins title="nlp 2.00">dubitares,</ins>
           </span>
         </span>
         <span id="w_61" class="ocr_word" title="bbox 961 634 1065 686">
@@ -372,8 +365,7 @@
         </span>
         <span id="w_62" class="ocr_word" title="bbox 1107 634 1255 676">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">inessd</ins>
-            <del title="nlp 0.90">inessd</del>
+            <ins title="nlp 2.00">inesset</ins>
           </span>
         </span>
         <span id="w_63" class="ocr_word" title="bbox 1295 634 1343 675">
@@ -390,8 +382,7 @@
         </span>
         <span id="w_65" class="ocr_word" title="bbox 1532 633 1713 676">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iibidnii</ins>
-            <del title="nlp 0.90">iibidnii</del>
+            <ins title="nlp 2.00">tibicinii</ins>
           </span>
         </span>
         <span id="w_66" class="ocr_word" title="bbox 1754 633 1958 688">
@@ -458,8 +449,7 @@
       <span class="ocr_line" title="bbox 211 774 1960 831">
         <span id="w_76" class="ocr_word" title="bbox 211 776 362 820">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">scUicd</ins>
-            <del title="nlp 0.90">scUicd</del>
+            <ins title="nlp 2.00">scilicet</ins>
           </span>
         </span>
         <span id="w_77" class="ocr_word" title="bbox 393 789 571 818">
@@ -572,14 +562,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 211 918 2015 974">
-        <span id="w_95" class="ocr_word" title="bbox 211 918 474 974">
+        <span id="w_95_0" class="ocr_word" title="bbox 211 918 474 974">
           <span class="alternatives">
-            <ins title="nlp 2.00">sapientes?“</ins>
+            <ins class="alt" title="nlp 2.00">sapientes?“</ins>
           </span>
         </span>
-        <span id="w_96" class="ocr_word" title="bbox 1981 937 2015 963">
+        <span id="w_95_1" class="ocr_word" title="bbox 211 918 474 974">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">10</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -638,9 +628,14 @@
             <ins title="nlp 2.00">Κιτιεύς,</ins>
           </span>
         </span>
-        <span id="w_107" class="ocr_word" title="bbox 1709 989 1795 1034" lang="grc">
+        <span id="w_107_0" class="ocr_word" title="bbox 1709 989 1795 1034">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ξενορῶντος</ins>
+            <ins class="alt" title="nlp 2.00">ἀπὸ</ins>
+          </span>
+        </span>
+        <span id="w_107_1" class="ocr_word" title="bbox 1709 989 1795 1034">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Ξενοφῶντος</ins>
           </span>
         </span>
       </span>
@@ -675,14 +670,14 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_115" class="ocr_word" title="bbox 1497 1072 1760 1118" lang="grc">
+        <span id="w_115_0" class="ocr_word" title="bbox 1497 1072 1760 1118">
           <span class="alternatives">
-            <ins title="nlp 2.00">προἱέμενον</ins>
+            <ins class="alt" title="nlp 2.00">προΐέμενον</ins>
           </span>
         </span>
-        <span id="w_116" class="ocr_word" title="bbox 1793 1061 1962 1118" lang="grc">
+        <span id="w_115_1" class="ocr_word" title="bbox 1497 1072 1760 1118">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σπέρμα</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -839,8 +834,7 @@
         </span>
         <span id="w_148" class="ocr_word" title="bbox 1026 1276 1149 1318">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">NihU</ins>
-            <del title="nlp 0.90">NihU</del>
+            <ins title="nlp 2.00">Νihil</ins>
           </span>
         </span>
         <span id="w_149" class="ocr_word" title="bbox 1179 1277 1288 1331" lang="grc">
@@ -1181,9 +1175,9 @@
             <del title="nlp 0.90">sensu</del>
           </span>
         </span>
-        <span id="w_207" class="ocr_word" title="bbox 1174 1708 1391 1751">
+        <span id="w_207_0" class="ocr_word" title="bbox 1174 1708 1391 1751">
           <span class="alternatives">
-            <ins title="nlp 2.00">munds.“</ins>
+            <ins class="alt" title="nlp 2.00">mundus.“</ins>
           </span>
         </span>
       </span>
@@ -1309,14 +1303,14 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_231" class="ocr_word" title="bbox 1688 1866 1849 1908" lang="grc">
+        <span id="w_231_0" class="ocr_word" title="bbox 1688 1866 1849 1908">
           <span class="alternatives">
-            <ins title="nlp 2.00">μίρους</ins>
+            <ins class="alt" title="nlp 2.00">μέρους</ins>
           </span>
         </span>
-        <span id="w_232" class="ocr_word" title="bbox 1879 1858 1966 1908" lang="grc">
+        <span id="w_231_1" class="ocr_word" title="bbox 1688 1866 1849 1908">
           <span class="alternatives">
-            <ins title="nlp 2.00">χεῖρον</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1380,7 +1374,7 @@
       <span class="ocr_line" title="bbox 344 2340 1969 2399">
         <span id="w_243" class="ocr_word" title="bbox 344 2341 436 2385">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">116</ins>
+            <ins title="nlp 2.00">115</ins>
           </span>
         </span>
         <span id="w_244" class="ocr_word" title="bbox 469 2341 660 2385">
@@ -1469,7 +1463,7 @@
         </span>
         <span id="w_259" class="ocr_word" title="bbox 803 2414 1022 2469" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐρανός</ins>
+            <ins title="nlp 2.00">„οὐρανός</ins>
           </span>
         </span>
         <span id="w_260" class="ocr_word" title="bbox 1054 2412 1174 2455" lang="grc">
@@ -1615,8 +1609,7 @@
         </span>
         <span id="w_288" class="ocr_word" title="bbox 469 2628 622 2672">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aetius</ins>
-            <del title="nlp 0.90">Aetius</del>
+            <ins title="nlp 2.00">Αëtius</ins>
           </span>
         </span>
         <span id="w_289" class="ocr_word" title="bbox 653 2628 695 2672">
@@ -1705,8 +1698,7 @@
         </span>
         <span id="w_304" class="ocr_word" title="bbox 718 2772 856 2814">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_305" class="ocr_word" title="bbox 883 2770 966 2813">
@@ -1735,14 +1727,14 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_310" class="ocr_word" title="bbox 1619 2767 1776 2821" lang="grc">
+        <span id="w_310_0" class="ocr_word" title="bbox 1619 2767 1776 2821">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἄναψιν</ins>
+            <ins class="alt" title="nlp 2.00">ἔξαψιν</ins>
           </span>
         </span>
-        <span id="w_311" class="ocr_word" title="bbox 1820 2785 1972 2824" lang="grc">
+        <span id="w_310_1" class="ocr_word" title="bbox 1619 2767 1776 2821">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νεφῶν</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1774,7 +1766,7 @@
         </span>
         <span id="w_317" class="ocr_word" title="bbox 1476 2841 1535 2892" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὃς</ins>
+            <ins title="nlp 2.00">ὡς</ins>
           </span>
         </span>
         <span id="w_318" class="ocr_word" title="bbox 1581 2843 1762 2897" lang="grc">
