--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0084.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0084.html
@@ -446,8 +446,7 @@
         </span>
         <span id="w_81" class="ocr_word" title="bbox 845 852 981 894">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_82" class="ocr_word" title="bbox 1009 851 1092 894">
@@ -1260,19 +1259,19 @@
             <ins class="alt" title="nlp 1.00">πύρινον</ins>
           </span>
         </span>
-        <span id="w_235" class="ocr_word" title="bbox 1549 1847 1656 1903">
+        <span id="w_235_0" class="ocr_word" title="bbox 1549 1847 1656 1903">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;δὲ&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;δὲ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_235_1" class="ocr_word" title="bbox 1549 1847 1656 1903">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_236" class="ocr_word" title="bbox 1686 1863 1826 1905" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πυρὸς</ins>
-          </span>
-        </span>
-        <span id="w_237" class="ocr_word" title="bbox 1868 1863 2080 1903" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τεχνικοῦ.</ins>
           </span>
         </span>
       </span>
@@ -1719,9 +1718,14 @@
             <ins class="alt" title="nlp 1.00">τὰς</ins>
           </span>
         </span>
-        <span id="w_329" class="ocr_word" title="bbox 900 2422 1219 2475" lang="grc">
+        <span id="w_329_0" class="ocr_word" title="bbox 900 2422 1219 2475">
           <span class="alternatives">
-            <ins title="nlp 2.00">πανσελήνοθς·</ins>
+            <ins class="alt" title="nlp 2.00">πανσελήνους·</ins>
+          </span>
+        </span>
+        <span id="w_329_1" class="ocr_word" title="bbox 900 2422 1219 2475">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_330" class="ocr_word" title="bbox 1264 2421 1500 2474" lang="grc">
@@ -1742,11 +1746,6 @@
         <span id="w_333" class="ocr_word" title="bbox 1703 2417 1963 2474" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀμφοτέρων</ins>
-          </span>
-        </span>
-        <span id="w_334" class="ocr_word" title="bbox 2007 2418 2083 2468" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τὰς</ins>
           </span>
         </span>
       </span>
@@ -2186,17 +2185,16 @@
             <ins title="nlp 2.00">ἡλίῳ—νοτιωτέρα </ins>
           </span>
         </span>
-        <span id="w_414" class="ocr_word" title="bbox 1981 2992 2080 3025" lang="grc">
+        <span id="w_414_0" class="ocr_word" title="bbox 1981 2992 2080 3025">
           <span class="alternatives">
-            <ins title="nlp 2.00">γινοδεσθντ</ins>
+            <ins class="alt" title="nlp 2.00">γινο-</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 346 3032 2082 3081">
         <span id="w_416" class="ocr_word" title="bbox 506 3035 546 3069">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">in</ins>
-            <del title="nlp 0.90">in</del>
+            <ins title="nlp 2.00">desunt</ins>
           </span>
         </span>
         <span id="w_417" class="ocr_word" title="bbox 571 3035 611 3069">
