--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0086.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0086.html
@@ -48,8 +48,7 @@
         </span>
         <span id="w_6" class="ocr_word" title="bbox 1035 328 1180 370">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">eyang.</ins>
-            <del title="nlp 0.90">eyang.</del>
+            <ins title="nlp 2.00">evang.</ins>
           </span>
         </span>
         <span id="w_7" class="ocr_word" title="bbox 1208 313 1289 356">
@@ -469,7 +468,7 @@
         </span>
         <span id="w_87" class="ocr_word" title="bbox 1642 809 1741 865" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰς]</ins>
+            <ins title="nlp 2.00">[εἰς]</ins>
           </span>
         </span>
         <span id="w_88" class="ocr_word" title="bbox 1773 825 1821 852" lang="grc">
@@ -967,8 +966,7 @@
         </span>
         <span id="w_182" class="ocr_word" title="bbox 778 1449 930 1493">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aetius</ins>
-            <del title="nlp 0.90">Aetius</del>
+            <ins title="nlp 2.00">Αëtius</ins>
           </span>
         </span>
         <span id="w_183" class="ocr_word" title="bbox 955 1449 1062 1505">
@@ -995,8 +993,7 @@
         </span>
         <span id="w_187" class="ocr_word" title="bbox 1262 1448 1402 1507">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(DDGr</ins>
-            <del title="nlp 0.90">(DDGr</del>
+            <ins title="nlp 2.00">(DDG</ins>
           </span>
         </span>
         <span id="w_188" class="ocr_word" title="bbox 1421 1465 1461 1505">
@@ -1015,14 +1012,14 @@
             <ins class="alt" title="nlp 1.00">Ζήνων</ins>
           </span>
         </span>
-        <span id="w_191" class="ocr_word" title="bbox 1835 1446 1903 1504" lang="grc">
+        <span id="w_192_0" class="ocr_word" title="bbox 1935 1445 2122 1503">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
+            <ins class="alt" title="nlp 2.00">(τὸ</ins>
           </span>
         </span>
-        <span id="w_192" class="ocr_word" title="bbox 1935 1445 2122 1503" lang="grc">
+        <span id="w_192_1" class="ocr_word" title="bbox 1935 1445 2122 1503">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τὸ σπέρμα)</ins>
+            <ins class="alt" title="nlp 2.00">σπέρμα)</ins>
           </span>
         </span>
       </span>
@@ -1126,9 +1123,14 @@
             <ins class="alt" title="nlp 1.00">94</ins>
           </span>
         </span>
-        <span id="w_211" class="ocr_word" title="bbox 1273 1589 1394 1648" lang="grc">
+        <span id="w_211_0" class="ocr_word" title="bbox 1273 1589 1394 1648">
           <span class="alternatives">
-            <ins title="nlp 2.00">XIX</ins>
+            <ins class="alt" title="nlp 2.00">(XIX</ins>
+          </span>
+        </span>
+        <span id="w_211_1" class="ocr_word" title="bbox 1273 1589 1394 1648">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_212" class="ocr_word" title="bbox 1425 1606 1464 1646">
@@ -1155,11 +1157,6 @@
         <span id="w_216" class="ocr_word" title="bbox 1898 1588 2017 1631" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐστὶν</ins>
-          </span>
-        </span>
-        <span id="w_217" class="ocr_word" title="bbox 2049 1588 2124 1630" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀνθρώπου,</ins>
           </span>
         </span>
       </span>
@@ -1297,8 +1294,7 @@
         </span>
         <span id="w_245" class="ocr_word" title="bbox 1229 1804 1367 1847">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_246" class="ocr_word" title="bbox 1382 1802 1466 1846">
@@ -1367,7 +1363,7 @@
         </span>
         <span id="w_260" class="ocr_word" title="bbox 1746 1871 1991 1931" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λέγουσιν)</ins>
+            <ins title="nlp 2.00">(λέγουσιν)</ins>
           </span>
         </span>
         <span id="w_261" class="ocr_word" title="bbox 2035 1880 2126 1923" lang="grc">
@@ -1435,7 +1431,7 @@
         </span>
         <span id="w_273" class="ocr_word" title="bbox 2085 1942 2127 1985">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">11</ins>
+            <ins title="nlp 2.00">ΙΙ</ins>
           </span>
         </span>
       </span>
@@ -1451,9 +1447,9 @@
             <del title="nlp 0.90">n.</del>
           </span>
         </span>
-        <span id="w_276" class="ocr_word" title="bbox 451 2020 697 2062">
+        <span id="w_276_0" class="ocr_word" title="bbox 451 2020 697 2062">
           <span class="alternatives">
-            <ins title="nlp 2.00">—747.</ins>
+            <ins class="alt" title="nlp 2.00">741—747.</ins>
           </span>
         </span>
       </span>
@@ -1465,8 +1461,7 @@
         </span>
         <span id="w_278" class="ocr_word" title="bbox 634 2090 786 2134">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aetius</ins>
-            <del title="nlp 0.90">Aetius</del>
+            <ins title="nlp 2.00">Αëtius</ins>
           </span>
         </span>
         <span id="w_279" class="ocr_word" title="bbox 811 2091 916 2146">
@@ -1514,7 +1509,7 @@
         </span>
         <span id="w_286" class="ocr_word" title="bbox 1672 2087 1767 2140" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὰς</ins>
+            <ins title="nlp 2.00">(τὰς</ins>
           </span>
         </span>
         <span id="w_287" class="ocr_word" title="bbox 1791 2085 1989 2143" lang="grc">
@@ -1646,8 +1641,7 @@
       <span class="ocr_line" title="bbox 390 2301 2061 2360">
         <span id="w_310" class="ocr_word" title="bbox 390 2306 527 2348">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_311" class="ocr_word" title="bbox 553 2304 637 2347">
@@ -1683,7 +1677,7 @@
         </span>
         <span id="w_317" class="ocr_word" title="bbox 1293 2301 1498 2360" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σπέρμα)</ins>
+            <ins title="nlp 2.00">(σπέρμα)</ins>
           </span>
         </span>
         <span id="w_318" class="ocr_word" title="bbox 1531 2304 1697 2357" lang="grc">
@@ -1738,8 +1732,7 @@
         </span>
         <span id="w_327" class="ocr_word" title="bbox 1288 2375 1476 2417">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">contrdhi</ins>
-            <del title="nlp 0.90">contrdhi</del>
+            <ins title="nlp 2.00">contrahi</ins>
           </span>
         </span>
         <span id="w_328" class="ocr_word" title="bbox 1515 2378 1651 2416">
@@ -1803,9 +1796,14 @@
             <del title="nlp 0.90">et</del>
           </span>
         </span>
-        <span id="w_338" class="ocr_word" title="bbox 1257 2446 1360 2502">
+        <span id="w_338_0" class="ocr_word" title="bbox 1257 2446 1360 2502">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;id&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;id&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_338_1" class="ocr_word" title="bbox 1257 2446 1360 2502">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_339" class="ocr_word" title="bbox 1391 2448 1529 2500">
@@ -1818,12 +1816,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">esse</ins>
             <del title="nlp 0.90">esse</del>
-          </span>
-        </span>
-        <span id="w_341" class="ocr_word" title="bbox 1672 2445 1862 2487">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dormire.</ins>
-            <del title="nlp 0.90">dormire.</del>
           </span>
         </span>
       </span>
