--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0087.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0087.html
@@ -309,9 +309,14 @@
             <ins class="alt" title="nlp 1.00">προστάττοντας</ins>
           </span>
         </span>
-        <span id="w_57" class="ocr_word" title="bbox 1842 674 1983 681">
+        <span id="w_57_0" class="ocr_word" title="bbox 1842 674 1983 681">
           <span class="alternatives">
-            <ins title="nlp 2.00">— —</ins>
+            <ins class="alt" title="nlp 2.00">—</ins>
+          </span>
+        </span>
+        <span id="w_57_1" class="ocr_word" title="bbox 1842 674 1983 681">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">—</ins>
           </span>
         </span>
       </span>
@@ -841,14 +846,14 @@
             <ins title="nlp 2.00">ἀναλογίζοντας</ins>
           </span>
         </span>
-        <span id="w_159" class="ocr_word" title="bbox 1666 1439 1815 1494">
+        <span id="w_159_0" class="ocr_word" title="bbox 1666 1439 1815 1494">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τοῖς&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τοῖς&amp;#x003E;</ins>
           </span>
         </span>
-        <span id="w_160" class="ocr_word" title="bbox 1853 1440 1982 1493" lang="grc">
+        <span id="w_159_1" class="ocr_word" title="bbox 1666 1439 1815 1494">
           <span class="alternatives">
-            <ins title="nlp 2.00">νοσήμασιν.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -969,7 +974,7 @@
         </span>
         <span id="w_184" class="ocr_word" title="bbox 448 1661 707 1707" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Στωικοῖς</ins>
+            <ins title="nlp 2.00">Στωΐκοῖς</ins>
           </span>
         </span>
         <span id="w_185" class="ocr_word" title="bbox 738 1655 994 1711" lang="grc">
@@ -1007,8 +1012,7 @@
         </span>
         <span id="w_191" class="ocr_word" title="bbox 2004 1670 2038 1695">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lo</ins>
-            <del title="nlp 0.90">lo</del>
+            <ins title="nlp 2.00">20</ins>
           </span>
         </span>
       </span>
@@ -1147,8 +1151,7 @@
         </span>
         <span id="w_214" class="ocr_word" title="bbox 677 1877 818 1916">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">auMor</ins>
-            <del title="nlp 0.90">auMor</del>
+            <ins title="nlp 2.00">auctor</ins>
           </span>
         </span>
         <span id="w_215" class="ocr_word" title="bbox 848 1876 923 1925">
@@ -1215,8 +1218,7 @@
         </span>
         <span id="w_225" class="ocr_word" title="bbox 396 1949 512 1989">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">vocai</ins>
-            <del title="nlp 0.90">vocai</del>
+            <ins title="nlp 2.00">vocat</ins>
           </span>
         </span>
         <span id="w_226" class="ocr_word" title="bbox 535 1947 684 1989">
@@ -1345,9 +1347,14 @@
             <del title="nlp 0.90">et</del>
           </span>
         </span>
-        <span id="w_249" class="ocr_word" title="bbox 615 2090 766 2145" lang="grc">
+        <span id="w_249_0" class="ocr_word" title="bbox 615 2090 766 2145">
           <span class="alternatives">
-            <ins title="nlp 2.00">niginti</ins>
+            <ins class="alt" title="nlp 2.00">viginti</ins>
+          </span>
+        </span>
+        <span id="w_249_1" class="ocr_word" title="bbox 615 2090 766 2145">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_250" class="ocr_word" title="bbox 796 2088 949 2142">
@@ -1359,12 +1366,6 @@
         <span id="w_251" class="ocr_word" title="bbox 981 2089 1125 2133" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Ζώτου</ins>
-          </span>
-        </span>
-        <span id="w_252" class="ocr_word" title="bbox 1156 2089 1344 2143">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">triginta.</ins>
-            <del title="nlp 0.90">triginta.</del>
           </span>
         </span>
       </span>
@@ -1443,17 +1444,11 @@
         </span>
         <span id="w_265" class="ocr_word" title="bbox 1826 2418 1987 2461">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">corpo-</ins>
+            <ins title="nlp 2.00">corporalis.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 237 2480 1986 2538">
-        <span id="w_266" class="ocr_word" title="bbox 237 2486 372 2530">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ralis.</ins>
-            <del title="nlp 0.90">corporalis.</del>
-          </span>
-        </span>
         <span id="w_267" class="ocr_word" title="bbox 424 2512 471 2516">
           <span class="alternatives">
             <ins title="nlp 2.00">—</ins>
@@ -1538,8 +1533,7 @@
         </span>
         <span id="w_281" class="ocr_word" title="bbox 1066 2555 1261 2598">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">aetema</ins>
-            <del title="nlp 0.90">aetema</del>
+            <ins title="nlp 2.00">aeterna</ins>
           </span>
         </span>
         <span id="w_282" class="ocr_word" title="bbox 1292 2555 1380 2599">
@@ -1572,8 +1566,7 @@
         </span>
         <span id="w_287" class="ocr_word" title="bbox 2006 2569 2041 2596">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">so</ins>
-            <del title="nlp 0.90">so</del>
+            <ins title="nlp 2.00">30</ins>
           </span>
         </span>
       </span>
@@ -1849,8 +1842,7 @@
         </span>
         <span id="w_333" class="ocr_word" title="bbox 1416 2937 1692 2993">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">irUeUegentia</ins>
-            <del title="nlp 0.90">irUeUegentia</del>
+            <ins title="nlp 2.00">intellegentia</ins>
           </span>
         </span>
         <span id="w_334" class="ocr_word" title="bbox 1722 2937 1910 2987">
@@ -1867,8 +1859,7 @@
         </span>
         <span id="w_336" class="ocr_word" title="bbox 2007 2951 2040 2978">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">u</ins>
-            <del title="nlp 0.90">u</del>
+            <ins title="nlp 2.00">35</ins>
           </span>
         </span>
       </span>
@@ -1885,8 +1876,7 @@
         </span>
         <span id="w_339" class="ocr_word" title="bbox 572 3058 717 3105">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">BcripBi,</ins>
-            <del title="nlp 0.90">BcripBi,</del>
+            <ins title="nlp 2.00">scripsi,</ins>
           </span>
         </span>
         <span id="w_340" class="ocr_word" title="bbox 744 3058 867 3094" lang="grc">
@@ -1928,8 +1918,7 @@
         </span>
         <span id="w_347" class="ocr_word" title="bbox 1701 3053 1845 3100">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">scripBi,</ins>
-            <del title="nlp 0.90">scripBi,</del>
+            <ins title="nlp 2.00">scripsi,</ins>
           </span>
         </span>
         <span id="w_348" class="ocr_word" title="bbox 1871 3053 1988 3089" lang="grc">
@@ -2016,15 +2005,14 @@
             <del title="nlp 0.90">quoique</del>
           </span>
         </span>
-        <span id="w_363" class="ocr_word" title="bbox 1818 3108 1886 3151">
+        <span id="w_363_0" class="ocr_word" title="bbox 1818 3108 1886 3151">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(vd</ins>
-            <del title="nlp 0.90">(vd</del>
+            <ins class="alt" title="nlp 2.00">(vel</ins>
           </span>
         </span>
-        <span id="w_364" class="ocr_word" title="bbox 1911 3105 1988 3143">
+        <span id="w_363_1" class="ocr_word" title="bbox 1818 3108 1886 3151">
           <span class="alternatives">
-            <ins title="nlp 2.00">cyuqye)</ins>
+            <ins class="alt" title="nlp 2.00">cuique)</ins>
           </span>
         </span>
       </span>
@@ -2041,9 +2029,14 @@
             <del title="nlp 0.90">quidque</del>
           </span>
         </span>
-        <span id="w_368" class="ocr_word" title="bbox 742 3168 838 3203" lang="grc">
+        <span id="w_368_0" class="ocr_word" title="bbox 742 3168 838 3203">
           <span class="alternatives">
-            <ins title="nlp 2.00">quidque</ins>
+            <ins class="alt" title="nlp 2.00">libri.</ins>
+          </span>
+        </span>
+        <span id="w_368_1" class="ocr_word" title="bbox 742 3168 838 3203">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_369" class="ocr_word" title="bbox 883 3168 894 3211">
@@ -2061,12 +2054,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">del.</ins>
             <del title="nlp 0.90">del.</del>
-          </span>
-        </span>
-        <span id="w_372" class="ocr_word" title="bbox 1094 3165 1200 3202">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">idem.</ins>
-            <del title="nlp 0.90">idem.</del>
           </span>
         </span>
       </span>
