--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0088.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0088.html
@@ -73,8 +73,7 @@
         </span>
         <span id="w_10" class="ocr_word" title="bbox 1394 274 1664 325">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">qvMereretur,</ins>
-            <del title="nlp 0.90">qvMereretur,</del>
+            <ins title="nlp 2.00">quaereretur,</ins>
           </span>
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1696 270 1807 312">
@@ -149,9 +148,14 @@
             <del title="nlp 0.90">Stoico</del>
           </span>
         </span>
-        <span id="w_23" class="ocr_word" title="bbox 1458 342 1627 384">
+        <span id="w_23_0" class="ocr_word" title="bbox 1458 342 1627 384">
           <span class="alternatives">
-            <ins title="nlp 2.00">animu^</ins>
+            <ins class="alt" title="nlp 2.00">animus</ins>
+          </span>
+        </span>
+        <span id="w_23_1" class="ocr_word" title="bbox 1458 342 1627 384">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_24" class="ocr_word" title="bbox 1657 342 1769 395">
@@ -160,16 +164,11 @@
             <del title="nlp 0.90">ignis</del>
           </span>
         </span>
-        <span id="w_25" class="ocr_word" title="bbox 1797 342 1969 384">
-          <span class="alternatives">
-            <ins title="nlp 2.00">videtur.</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 502 410 2118 471">
         <span id="w_26" class="ocr_word" title="bbox 502 414 592 458">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">136</ins>
+            <ins title="nlp 2.00">135</ins>
           </span>
         </span>
         <span id="w_27" class="ocr_word" title="bbox 625 414 840 471">
@@ -180,8 +179,7 @@
         </span>
         <span id="w_28" class="ocr_word" title="bbox 870 413 1010 456">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_29" class="ocr_word" title="bbox 1040 412 1135 456">
@@ -569,9 +567,9 @@
             <ins title="nlp 2.00">„consitum</ins>
           </span>
         </span>
-        <span id="w_104" class="ocr_word" title="bbox 1996 911 2121 964">
+        <span id="w_104_0" class="ocr_word" title="bbox 1996 911 2121 964">
           <span class="alternatives">
-            <ins title="nlp 2.00">spiritum“</ins>
+            <ins class="alt" title="nlp 2.00">spiritum“</ins>
           </span>
         </span>
       </span>
@@ -606,9 +604,14 @@
             <del title="nlp 0.90">instruit,</del>
           </span>
         </span>
-        <span id="w_111" class="ocr_word" title="bbox 1456 986 1581 1037">
+        <span id="w_111_0" class="ocr_word" title="bbox 1456 986 1581 1037">
           <span class="alternatives">
-            <ins title="nlp 2.00">„quo"</ins>
+            <ins class="alt" title="nlp 2.00">„quo“</ins>
+          </span>
+        </span>
+        <span id="w_111_1" class="ocr_word" title="bbox 1456 986 1581 1037">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_112" class="ocr_word" title="bbox 1618 984 1755 1037">
@@ -617,14 +620,9 @@
             <del title="nlp 0.90">inquit</del>
           </span>
         </span>
-        <span id="w_113" class="ocr_word" title="bbox 1790 983 1993 1037">
+        <span id="w_113_0" class="ocr_word" title="bbox 1790 983 1993 1037">
           <span class="alternatives">
-            <ins title="nlp 2.00">„digresso</ins>
-          </span>
-        </span>
-        <span id="w_114" class="ocr_word" title="bbox 2030 983 2125 1024">
-          <span class="alternatives">
-            <ins title="nlp 2.00">BUNk</ins>
+            <ins class="alt" title="nlp 2.00">„digresso</ins>
           </span>
         </span>
       </span>
@@ -722,8 +720,7 @@
         </span>
         <span id="w_132" class="ocr_word" title="bbox 1601 1129 1736 1169">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">auiem</ins>
-            <del title="nlp 0.90">auiem</del>
+            <ins title="nlp 2.00">autem</ins>
           </span>
         </span>
         <span id="w_133" class="ocr_word" title="bbox 1774 1126 1948 1181">
@@ -742,8 +739,7 @@
       <span class="ocr_line" title="bbox 387 1195 2126 1254">
         <span id="w_135" class="ocr_word" title="bbox 387 1204 464 1243">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cst:</ins>
-            <del title="nlp 0.90">cst:</del>
+            <ins title="nlp 2.00">est:</ins>
           </span>
         </span>
         <span id="w_136" class="ocr_word" title="bbox 496 1213 587 1254">
@@ -764,9 +760,14 @@
             <del title="nlp 0.90">est</del>
           </span>
         </span>
-        <span id="w_139" class="ocr_word" title="bbox 882 1199 1065 1240">
+        <span id="w_139_0" class="ocr_word" title="bbox 882 1199 1065 1240">
           <span class="alternatives">
-            <ins title="nlp 2.00">anima.“</ins>
+            <ins class="alt" title="nlp 2.00">anima.“</ins>
+          </span>
+        </span>
+        <span id="w_139_1" class="ocr_word" title="bbox 882 1199 1065 1240">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_140" class="ocr_word" title="bbox 1096 1222 1156 1227">
@@ -812,12 +813,6 @@
         <span id="w_147" class="ocr_word" title="bbox 1876 1196 1940 1238">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">19.</ins>
-          </span>
-        </span>
-        <span id="w_148" class="ocr_word" title="bbox 1985 1197 2126 1238">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Zenon</ins>
-            <del title="nlp 0.90">Zenon</del>
           </span>
         </span>
       </span>
@@ -1127,8 +1122,7 @@
         </span>
         <span id="w_204" class="ocr_word" title="bbox 1358 1623 1565 1679">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Spvritum</ins>
-            <del title="nlp 0.90">Spvritum</del>
+            <ins title="nlp 2.00">Spiritum</ins>
           </span>
         </span>
         <span id="w_205" class="ocr_word" title="bbox 1613 1626 1763 1680">
@@ -1165,8 +1159,7 @@
         </span>
         <span id="w_210" class="ocr_word" title="bbox 768 1698 983 1740">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">hadenus:</ins>
-            <del title="nlp 0.90">hadenus:</del>
+            <ins title="nlp 2.00">hactenus:</ins>
           </span>
         </span>
         <span id="w_211" class="ocr_word" title="bbox 1027 1710 1104 1752">
@@ -1256,8 +1249,7 @@
         </span>
         <span id="w_225" class="ocr_word" title="bbox 1594 1769 1769 1810">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">moritwr</ins>
-            <del title="nlp 0.90">moritwr</del>
+            <ins title="nlp 2.00">moritur</ins>
           </span>
         </span>
         <span id="w_226" class="ocr_word" title="bbox 1795 1768 1979 1811">
@@ -1359,7 +1351,7 @@
       <span class="ocr_line" title="bbox 342 1981 2133 2041">
         <span id="w_243" class="ocr_word" title="bbox 342 2004 375 2029">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">35</ins>
+            <ins title="nlp 2.00">25</ins>
           </span>
         </span>
         <span id="w_244" class="ocr_word" title="bbox 395 2002 477 2041" lang="grc">
@@ -1567,7 +1559,7 @@
         </span>
         <span id="w_284" class="ocr_word" title="bbox 1530 2196 1709 2253" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Ζήνων</ins>
+            <ins title="nlp 2.00">(Zήνων</ins>
           </span>
         </span>
         <span id="w_285" class="ocr_word" title="bbox 1757 2195 1829 2238" lang="grc">
@@ -1667,8 +1659,7 @@
         </span>
         <span id="w_302" class="ocr_word" title="bbox 1555 2338 1597 2381">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">H</ins>
-            <del title="nlp 0.90">H</del>
+            <ins title="nlp 2.00">ΙΙ</ins>
           </span>
         </span>
         <span id="w_303" class="ocr_word" title="bbox 1625 2339 1650 2381">
@@ -1744,7 +1735,7 @@
         </span>
         <span id="w_316" class="ocr_word" title="bbox 1264 2409 1504 2468" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Διογένης</ins>
+            <ins title="nlp 2.00">(Διογένης</ins>
           </span>
         </span>
         <span id="w_317" class="ocr_word" title="bbox 1530 2411 1553 2454" lang="grc">
@@ -1939,14 +1930,24 @@
             <ins class="alt" title="nlp 1.00">οἱ</ins>
           </span>
         </span>
-        <span id="w_354" class="ocr_word" title="bbox 608 2763 647 2799" lang="grc">
+        <span id="w_354_0" class="ocr_word" title="bbox 608 2763 647 2799">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δὲ</ins>
+            <ins class="alt" title="nlp 2.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_355" class="ocr_word" title="bbox 687 2762 830 2810">
+        <span id="w_354_1" class="ocr_word" title="bbox 608 2763 647 2799">
           <span class="alternatives">
-            <ins title="nlp 2.00">&lt; σῶμα, διὰ τὸ&gt;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;σῶμα,</ins>
+          </span>
+        </span>
+        <span id="w_355_0" class="ocr_word" title="bbox 687 2762 830 2810">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">διὰ</ins>
+          </span>
+        </span>
+        <span id="w_355_1" class="ocr_word" title="bbox 687 2762 830 2810">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">τὸ&amp;#x003E;</ins>
           </span>
         </span>
         <span id="w_358" class="ocr_word" title="bbox 1069 2772 1218 2806" lang="grc">
@@ -1992,7 +1993,7 @@
         </span>
         <span id="w_365" class="ocr_word" title="bbox 597 2818 703 2863">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1896)</ins>
+            <ins title="nlp 2.00">1895)</ins>
           </span>
         </span>
         <span id="w_366" class="ocr_word" title="bbox 727 2828 762 2861">
@@ -2182,9 +2183,9 @@
             <del title="nlp 0.90">est</del>
           </span>
         </span>
-        <span id="w_398" class="ocr_word" title="bbox 1978 2918 2137 2955">
+        <span id="w_398_0" class="ocr_word" title="bbox 1978 2918 2137 2955">
           <span class="alternatives">
-            <ins title="nlp 2.00">anima.“</ins>
+            <ins class="alt" title="nlp 2.00">anima.“</ins>
           </span>
         </span>
       </span>
@@ -2303,14 +2304,14 @@
             <del title="nlp 0.90">definiens</del>
           </span>
         </span>
-        <span id="w_418" class="ocr_word" title="bbox 1793 3027 1978 3063">
+        <span id="w_418_0" class="ocr_word" title="bbox 1793 3027 1978 3063">
           <span class="alternatives">
-            <ins title="nlp 2.00">animam“</ins>
+            <ins class="alt" title="nlp 2.00">animam“</ins>
           </span>
         </span>
-        <span id="w_419" class="ocr_word" title="bbox 2003 3026 2138 3061">
+        <span id="w_418_1" class="ocr_word" title="bbox 1793 3027 1978 3063">
           <span class="alternatives">
-            <ins title="nlp 2.00">fundamentum</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
